chore: nightly refinement run 2026-05-12 — bump to v1.16.0.20 (cycle 17/100, +12428 lines)